1998-06-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/policy-builder.sh.in:
	    Added another retrievable spam domain list

	* proto/cf/aliases.cf:
	    A fragment of script (in comment) which is specific for
	    listserv.funet.fi  system.

	* scheduler/msgerror.c:
	    When reporting "Multiple-fault:" type error, tell also
	    which template file is not openable, and ask the recipient
	    to report the case to the postmaster...

	* router/functions.c:
	    - rd_doit() -- don't rename "core*" file into normal
			   spooled file name
	    - run_listexpand():  Did complain when it got 5 arguments
				 and refused to do the work :-(

1998-06-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/fqdnaliases.cf:
	    Match new listexpand parameters.

	* router/functions.c:
	    Added two new parameters to function  listexpand
	    to match underlying   rrouter  script function.

	* libsh/regex.h, libsh/regex.c:
	    Matched against GLIBC  <regex.h>  type defines.

	* transports/smtp/smtp.c:
	    A screwup in DBAT dot-processing algorithm.
	    Basically BDAT phase did line-start dot-duplication,
	    which is all right for DATA phase, but a no-no for
	    the BDAT :-(

1998-06-13  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf:
	    Removing "sender" parameters from alias processing
	    cases.  Copying them from other codes was a mistake
	    with subtle results.
	
	* proto/newaliases.in:
	    Parameter parsing error; didn't honour '-s' option.

1998-06-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtpcmds.c:
	    Reviewed, and changed quite many of the ENHANCEDSTATUSCODES
	    code values presented in replies.  Not all DNS errors are
	    POLICY (*.7.*) errors although policy analysis detects them..

1998-06-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/makedb.in:
	    Altered the parameter pickup routines to be more generic